force-app/main/objects/Bureau_Candidate_Login__c.object
<CustomObject>
    <description>Bureau module</description>
    <fields>
        <fullName>Bureau_Candidate__c</fullName>
        <description>This field represents the Candidate to which this Candidate Login belongs</description>
        <inlineHelpText>Select the Candidate to which this Candidate Login belongs</inlineHelpText>
        <label>Managed Services Candidate</label>
        <referenceTo>Bureau_Candidate__c</referenceTo>
        <relationshipLabel>Managed Services Candidate Logins</relationshipLabel>
        <relationshipName>Bureau_Candidate_Logins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bureau_System__c</fullName>
        <description>This field represents the Bureau System to which this Candidate Login belongs</description>
        <inlineHelpText>Select  the Bureau System to which this Candidate Login belongs</inlineHelpText>
        <label>Managed Services System</label>
        <referenceTo>Bureau_System__c</referenceTo>
        <relationshipLabel>Managed Services Candidate Logins</relationshipLabel>
        <relationshipName>Bureau_Candidate_Logins</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>URL_Custom__c</fullName>
        <description>This field represents the Custom System URL provided by the user</description>
        <inlineHelpText>Specify a custom System URL</inlineHelpText>
        <label>URL (Custom)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>IF(
	ISBLANK(URL_Custom__c),Bureau_System__r.System__r.System_URL__c,URL_Custom__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_Custom__c</fullName>
        <description>This field represents the Custom Username provided by the user</description>
        <inlineHelpText>Specify a custom Username</inlineHelpText>
        <label>Username (Custom)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>This field represents the Username that is automatically generated by the System</description>
        <formula>IF(ISBLANK(Username_Custom__c), 
Bureau_Candidate__r.Bureau_Job__r.Candidate_Username_Prefix__c + 
Bureau_Candidate__r.Bureau_Job__r.Name + &quot;.&quot; + Text(Bureau_Candidate__r.Sequence_No__c),
Username_Custom__c)</formula>
        <inlineHelpText>This username is automatically generated by the System</inlineHelpText>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <label>Managed Services Candidate Login</label>
    <nameField>
        <displayFormat>BCL{0000000000}</displayFormat>
        <label>Managed Services Candidate Login Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Services Candidate Logins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>